[package]
name = "comrak"
version = "0.34.0"
authors = ["Talya Connor <ashe@kivikakk.ee>", "Brett Walker <github@digitalmoksha.com>", "gjtorikian"]
rust-version = "1.62.1"
description = "A 100% CommonMark-compatible GitHub Flavored Markdown parser and formatter"
documentation = "https://docs.rs/comrak"
homepage = "https://github.com/kivikakk/comrak"
repository = "https://github.com/kivikakk/comrak"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "BSD-2-Clause"
categories = ["text-processing", "parsing", "command-line-utilities"]
exclude = [
    "/hooks/*",
    "/script/*",
    "/vendor/*",
    "/.travis.yml",
    "/Makefile",
    "/spec_out.txt",
]
resolver = "2"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true

[[bin]]
name = "comrak"
required-features = ["cli", "syntect"]
doc = false

[dependencies]
typed-arena = "2.0.2"
entities = "1.0.1"
unicode_categories = "0.1.1"
memchr = "2"
shell-words = { version = "1.0", optional = true }
slug = "0.1.4"
emojis = { version = "0.6.2", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
bon = { version = "3", optional = true }
caseless = "0.2.1"

[dev-dependencies]
ntest = "0.9"
toml = "0.7.3"

[features]
default = ["cli", "syntect", "bon"]
cli = ["clap", "shell-words", "xdg"]
shortcodes = ["emojis"]
bon = ["dep:bon"]

[target.'cfg(all(not(windows), not(target_arch="wasm32")))'.dependencies]
xdg = { version = "^2.5", optional = true }

[target.'cfg(target_arch="wasm32")'.dependencies]
syntect = { version = "5.0", optional = true, default-features = false, features = [
    "default-fancy",
] }
clap = { version = "4.0.32", optional = true, features = ["derive", "string"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
syntect = { version = "5.0", optional = true, default-features = false, features = [
    "default-themes",
    "default-syntaxes",
    "html",
    "regex-onig",
] }
clap = { version = "4.0", optional = true, features = [
    "derive",
    "string",
    "wrap_help",
] }

[[example]]
name = "syntect"
required-features = [ "syntect" ]

[[example]]
name = "s-expr"
required-features = [ "bon" ]
