[package]
name = "comrak"
version = "0.49.0"
authors = ["Asherah Connor <ashe@kivikakk.ee>", "Brett Walker <github@digitalmoksha.com>", "gjtorikian"]
rust-version = "1.70"
description = "A 100% CommonMark-compatible GitHub Flavored Markdown parser and formatter"
documentation = "https://docs.rs/comrak"
homepage = "https://github.com/kivikakk/comrak"
repository = "https://github.com/kivikakk/comrak"
readme = "README.md"
keywords = ["markdown", "commonmark"]
license = "BSD-2-Clause"
categories = ["text-processing", "parsing", "command-line-utilities"]
exclude = [
    "/hooks/*",
    "/script/*",
    "/vendor/*",
    "/.travis.yml",
    "/Makefile",
    "/spec_out.txt",
]
resolver = "2"
edition = "2018"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true

[[bin]]
name = "comrak"
required-features = ["cli"]
doc = false

[dependencies]
typed-arena = "2.0.2"
unicode_categories = "0.1.1"
shell-words = { version = "1.0", optional = true }
emojis = { version = "0.6.2", optional = true }
arbitrary = { version = "1", optional = true, features = ["derive"] }
bon = { version = "3", optional = true }
caseless = "0.2.1"
fmt2io = { version = "1.0.0", optional = true }
jetscii = "0.5.3"

[dev-dependencies]
ntest = "0.9"
percent-encoding-rfc3986 = "0.1.3"
strum = { version = "0.26.3", features = ["derive"] }
toml = "0.7.3"
slug = "0.1.4"
pretty_assertions = "1.4.1"

[build-dependencies]
entities = "1.0.1"

[features]
default = ["cli", "syntect", "bon"]
cli = ["clap", "bon", "shell-words", "xdg", "fmt2io", "shortcodes", "phoenix_heex"]
shortcodes = ["emojis"]
phoenix_heex = []
bon = ["dep:bon"]

[target.'cfg(all(not(windows), not(target_arch="wasm32")))'.dependencies]
xdg = { version = "^2.5", optional = true }

[target.'cfg(any(target_arch = "wasm32", target_os = "ios"))'.dependencies]
syntect = { version = "5.0", optional = true, default-features = false, features = [
    "default-fancy",
] }

[target.'cfg(not(any(target_arch = "wasm32", target_os = "ios")))'.dependencies]
syntect = { version = "5.0", optional = true, default-features = false, features = [
    "default-themes",
    "default-syntaxes",
    "html",
    "regex-onig",
] }

[target.'cfg(target_arch="wasm32")'.dependencies]
clap = { version = "4.0.32", optional = true, features = ["derive", "string"] }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
clap = { version = "4.0", optional = true, features = [
    "derive",
    "string",
    "wrap_help",
] }

[[example]]
name = "syntect"
required-features = [ "syntect" ]

[[example]]
name = "s-expr"
required-features = [ "bon" ]
