[package]
name = "comrak_ffi"
version = "0.1.0"
description = "FFI bindings for the comrak crate"
edition = "2018"

[dependencies]
comrak = { path = "../" }
libc = "0"
paste = "1.0"

[build-dependencies]
cc = "1.0.46"

[profile.release]
panic = "abort"
lto = true

[lib]
crate-type = ["staticlib", "dylib"]
