[package]
name = "comrak-fuzz"
version = "0.0.0"
publish = false
edition = "2018"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.comrak]
path = ".."
features = ["shortcodes"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "markdown_to_html"
path = "fuzz_targets/markdown_to_html.rs"
test = false
doc = false
